[workspace]

members = [
    "checker_pattern",
    "checker_palette",
    "ultra_bevy",
    "ultra_bevy_derive",
    "ultra_bevy_snake",
    "ultra_crustaceous",
    "ultra_snake",
    "ultra_snake_standalone",
    "xtask"
]

[profile.release]
opt-level = 3 # fast binaries (and sometimes smaller)
# opt-level = "z" # small binaries
# opt-level = "s" # small binaries
lto = true # smaller binaries