[package]
name = "ultra_bevy"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
once_cell = "1.0"
bevy = { version = "0.8", default-features = false }
iyes_loopless = { version = "0.7", default-features = false, features = ["states"] }
bevy_system_graph = { version = "0.3", default-features = false  }
# bevy_app = { version = "0.8", default-features = false }
# bevy_app = { path = "../../bevy/crates/bevy_app" }
# bevy_utils = { path = "../../bevy/crates/bevy_utils" }
# bitflags = "1.3"
derive_more = "0.99"
# lazy_static = "1.4"
send_wrapper = "0.6"
rand = {version = "0.8", default-features = false, features = ["small_rng"]}
ultra_crustaceous = { path = "../ultra_crustaceous" }
wasm-bindgen = "0.2"
wee_alloc = "0.4"