[package]
name = "ultra_bevy"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]

[dependencies]
bevy = { version = "0.8", default-features = false }
bevy_system_graph = { version = "0.3", default-features = false  }
derive_more = "0.99"
iyes_loopless = { version = "0.7", default-features = false, features = ["states"] }
once_cell = "1.0"
send_wrapper = "0.6"
ultra_bevy_derive = { path = "../ultra_bevy_derive" }
ultra_crustaceous = { path = "../ultra_crustaceous" }
wasm-bindgen = "0.2"
wee_alloc = "0.4"