[package]
name = "ultra_bevy_snake"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
once_cell = "1.0"
bevy = { version = "0.8", default-features = false }
iyes_loopless = { version = "0.7", default-features = false, features = ["states"] }
bevy_system_graph = { version = "0.3", default-features = false  }
derive_more = "0.99"
send_wrapper = "0.6"
rand = {version = "0.8", default-features = false, features = ["small_rng"]}
ultra_bevy = { path = "../ultra_bevy" }
wasm-bindgen = "0.2"
wee_alloc = "0.4"