[package]
name = "ultra_snake"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ultra_crustaceous = { path = "../ultra_crustaceous" }
wasm-bindgen = "0.2"
lazy_static = "1.4"
glam = "0.21"
rand = {version = "0.8", default-features = false, features = ["small_rng"]}
wee_alloc = "0.4"